feat: added producer&consumer for a specific kafka topic

--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
+      CONFLUENT_VALUE_SCHEMA_VALIDATION: 'false'
+      CONFLUENT_KEY_SCHEMA_VALIDATION: 'false'
 
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
