--- a/kafka/pyproject.toml
+++ b/kafka/pyproject.toml
@@ -18,4 +18,4 @@ requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
 [tool.pdm.scripts]
-start = {call = "app.main:main"}
+start = {call = "app.main:start"}
