--- a/kafka/pyproject.toml
+++ b/kafka/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 dependencies = [
     "confluent-kafka>=2.3.0",
     "requests>=2.31.0",
+    "pydantic>=2.5.1",
+    "Faker>=20.0.3",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
