--- a/kafka/pyproject.toml
+++ b/kafka/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "app"
+name = "kafka"
 version = "0.1.0"
-description = ""
+description = "Using kafka to produce and consume data"
 authors = [
     {name = "Natan Nascimento", email = "natanascimentom@outlook.com"},
 ]
@@ -10,6 +10,7 @@ dependencies = [
     "requests>=2.31.0",
     "pydantic>=2.5.1",
     "Faker>=20.0.3",
+    "pydantic-avro>=0.6.5",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
